Update Resume and usernames

--- a/index.html
+++ b/index.html
@@ -56,71 +56,71 @@
 
 								<div>
 									<h3>Forex</h3>
-									<p>Currency conversion fees are usually considered to be unavoidable. But due to the amount of money exchanged globally between different currencies, traders could easily exchange the money directly between themselves, thus avoiding the conversion fees. This website is where people would post what currencies they have and which ones they desire. Once a match is found they meet up and trade. The code could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/Forex">https://github.com/MuhammadZ985/Forex</a></p>
+									<p>Currency conversion fees are usually considered to be unavoidable. But due to the amount of money exchanged globally between different currencies, traders could easily exchange the money directly between themselves, thus avoiding the conversion fees. This website is where people would post what currencies they have and which ones they desire. Once a match is found they meet up and trade. The code could be seen on the following GitHub link: <a href="https://github.com/mhzaman-cs/Forex">https://github.com/mhzaman-cs/Forex</a></p>
 								</div>
 
 								<div>
 									<h3>Citadel DataOpen Report</h3>
 
-									<p>The East-Coast Dataopen hosted by Citadel and Correlation One is an invite-only Datathon featuring university students across the east coast. The event started on the 21st of March and ended on the 28th, lasting about a whole week. I was in a team of two where we analyzed the non-conventional indicators and instigators of traffic. We posed the following question: "How would investments in businesses and education affect traffic and road safety in major American cities?" In this report, we analyzed datasets and later created recommendations for which non-conventional areas municipal governments should invest in to reduce traffic congestion. The three cities of focus were New York, NY, Austin, TX, and Washington, DC. We analyzed publicly available data on 311 calls, building permits, business licenses, population education level and traffic congestion statistics. The report could be seen on the following GitHub link: <a target="_blank" href="https://github.com/MuhammadZ985/Citadel-Datathon">https://github.com/MuhammadZ985/Citadel-Datathon</a></p>
+									<p>The East-Coast Dataopen hosted by Citadel and Correlation One is an invite-only Datathon featuring university students across the east coast. The event started on the 21st of March and ended on the 28th, lasting about a whole week. I was in a team of two where we analyzed the non-conventional indicators and instigators of traffic. We posed the following question: "How would investments in businesses and education affect traffic and road safety in major American cities?" In this report, we analyzed datasets and later created recommendations for which non-conventional areas municipal governments should invest in to reduce traffic congestion. The three cities of focus were New York, NY, Austin, TX, and Washington, DC. We analyzed publicly available data on 311 calls, building permits, business licenses, population education level and traffic congestion statistics. The report could be seen on the following GitHub link: <a target="_blank" href="https://github.com/mhzaman-cs/Citadel-Datathon">https://github.com/mhzaman-cs/Citadel-Datathon</a></p>
 								</div>
 
 								<div>
 									<h3>Amazon Customer Reviews Scraper</h3>
 									<p>This web scraping project would download amazon reviews using scrapy and its built-in files. To choose which product to download go into reviews.py in spiders and change the values in the list of ASIN numbers to the products you would like to download. Then run the program in the command prompt. The code for the project could be seen on the following GitHub link: <a target="_blank"
-									href="https://github.com/MuhammadZ985/amazonReviews">https://github.com/MuhammadZ985/amazonReviews</a></p>
+									href="https://github.com/mhzaman-cs/amazonReviews">https://github.com/mhzaman-cs/amazonReviews</a></p>
 								</div>
 
 								<div>
 									<h3>Vaccinator</h3>
-									<p>I had built a game based on Space Invaders with a Covid-19 spin on it. It was a solo project submitted to Hack-cade, a hackathon hosted by MLH. The project was made using python with the following modules: pygame, os, time, and random. The code could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/Covid-19-Game">https://github.com/MuhammadZ985/Covid-19-Game</a></p>
+									<p>I had built a game based on Space Invaders with a Covid-19 spin on it. It was a solo project submitted to Hack-cade, a hackathon hosted by MLH. The project was made using python with the following modules: pygame, os, time, and random. The code could be seen on the following GitHub link: <a href="https://github.com/mhzaman-cs/Covid-19-Game">https://github.com/mhzaman-cs/Covid-19-Game</a></p>
 								</div>
 
 
 								<div>
 									<h3>S&P 500 Stocks Visualization System</h3>
-									<p>This is a stock visualization system, which creates various graphs based on user input. It can visualize the S&P 500 stocks from 2013-2018 based on a Kaggle data set. This project utilizes the python libraries of pandas and plotly. The code could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/S-P500-Stock-Visulaization">https://github.com/MuhammadZ985/S-P500-Stock-Visulaization</a></p>
+									<p>This is a stock visualization system, which creates various graphs based on user input. It can visualize the S&P 500 stocks from 2013-2018 based on a Kaggle data set. This project utilizes the python libraries of pandas and plotly. The code could be seen on the following GitHub link: <a href="https://github.com/mhzaman-cs/S-P500-Stock-Visulaization">https://github.com/mhzaman-cs/S-P500-Stock-Visulaization</a></p>
 								</div>
 
 								<div>
 									<h3>Weather City</h3>
 									<p>WeatherCity is a full-stack web app, it utilizes node.js for its backend along with OpenWeatherMap's API to display the weather in the city inputted in
 										the search bar. It also shows the current weather based on location on the home page. The code for the project could be seen on the following GitHub link: <a target="_blank"
-										href="https://github.com/MuhammadZ985/WeatherProject">https://github.com/MuhammadZ985/WeatherProject</a></p>
+										href="https://github.com/mhzaman-cs/WeatherProject">https://github.com/mhzaman-cs/WeatherProject</a></p>
 									</div>
 
 								<div>
 									<h3>Website Generator</h3>
-									<p>This project would produce frontend webpages based on a series of questions and would then return static pages as code in the form of zip files. This would allow for flexibility while offering professional websites for users to utilize. The code could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/WebsiteGen">https://github.com/MuhammadZ985/WebsiteGen</a></p>
+									<p>This project would produce frontend webpages based on a series of questions and would then return static pages as code in the form of zip files. This would allow for flexibility while offering professional websites for users to utilize. The code could be seen on the following GitHub link: <a href="https://github.com/mhzaman-cs/WebsiteGen">https://github.com/mhzaman-cs/WebsiteGen</a></p>
 								</div>
 
 
 
 								<div>
 									<h3>Old Website</h3>
-									<p>My old personal website which I had made over the summer. It was a one-page static website that featured my experiences and achievement much like this one does, however, it had a completely different UX/UI design. The code for the project could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/Front-End-Personal-Site">https://github.com/MuhammadZ985/Front-End-Personal-Site</a></p>
+									<p>My old personal website which I had made over the summer. It was a one-page static website that featured my experiences and achievement much like this one does, however, it had a completely different UX/UI design. The code for the project could be seen on the following GitHub link: <a href="https://github.com/mhzaman-cs/Front-End-Personal-Site">https://github.com/mhzaman-cs/Front-End-Personal-Site</a></p>
 								</div>
 
 								<div>
 									<h3>Simon Game</h3>
-									<p>The Simon game is an online version of the board game Simon. The board is the screen and the 4 colors correspond to the 4 colors in Simon. The objective of this game is to remember the chain of colors that were presented by the game and to input them every time the level changes. The code for the project could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/Simon-Game-Challenge">https://github.com/MuhammadZ985/Simon-Game-Challenge</a></p>
+									<p>The Simon game is an online version of the board game Simon. The board is the screen and the 4 colors correspond to the 4 colors in Simon. The objective of this game is to remember the chain of colors that were presented by the game and to input them every time the level changes. The code for the project could be seen on the following GitHub link: <a href="https://github.com/mhzaman-cs/Simon-Game-Challenge">https://github.com/mhzaman-cs/Simon-Game-Challenge</a></p>
 								</div>
 
 								<div>
 									<h3>Drum Kit</h3>
-									<p>Drum kit is an online virtual mimic of a drum set, with different keys corresponding to different types of drums. The buttons may also be clicked using the mouse pad, however, using the keyboard offers a more realistic experience. The code could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/Drum-Kit">https://github.com/MuhammadZ985/Drum-Kit</a></p>
+									<p>Drum kit is an online virtual mimic of a drum set, with different keys corresponding to different types of drums. The buttons may also be clicked using the mouse pad, however, using the keyboard offers a more realistic experience. The code could be seen on the following GitHub link: <a href="https://github.com/mhzaman-cs/Drum-Kit">https://github.com/mhzaman-cs/Drum-Kit</a></p>
 								</div>
 
 								<div>
 									<h3>Dice Game</h3>
-									<p>The dice challenge was one of the first challenges that I had done. The objective was to use basic javascript to create an online simulation of rolling a dice. A single die represents each player, the winner of the game would be the one that rolls the higher number. Refreshing the page would roll the dice again while informing the players of who had won. The code for the project could be seen on the following GitHub link: <a href="https://github.com/MuhammadZ985/Dicee_Challenge">https://github.com/MuhammadZ985/Dicee_Challenge</a></p>
+									<p>The dice challenge was one of the first challenges that I had done. The objective was to use basic javascript to create an online simulation of rolling a dice. A single die represents each player, the winner of the game would be the one that rolls the higher number. Refreshing the page would roll the dice again while informing the players of who had won. The code for the project could be seen on the following GitHub link: <a href="https://github.com/mhzaman-cs/Dicee_Challenge">https://github.com/mhzaman-cs/Dicee_Challenge</a></p>
 								</div>
 
 								<div>
 									<h3>TinDog</h3>
 									<p>TinDog is a remix of tinder but for dogs. This website uses Bootstrap, HTML, and CSS to create a single-page static website. The written content of this webpage was provided by a course on Udemy and the challenge was to
-										recreate a webpage based on a pdf document that was provided. I have added my spin to the website to make its UI/UX design more pleasant. The website could be seen on the following webpage: <a href="https://muhammadz985.github.io/TinDog/">https://muhammadz985.github.io/TinDog/</a>. The code could be seen on the following GitHub link: <a target="_blank"
-										href="https://github.com/MuhammadZ985/TinDog">https://github.com/MuhammadZ985/TinDog</a>.</p>
+										recreate a webpage based on a pdf document that was provided. I have added my spin to the website to make its UI/UX design more pleasant. The website could be seen on the following webpage: <a href="https://mhzaman-cs.github.io/TinDog/">https://mhzaman-cs.github.io/TinDog/</a>. The code could be seen on the following GitHub link: <a target="_blank"
+										href="https://github.com/mhzaman-cs/TinDog">https://github.com/mhzaman-cs/TinDog</a>.</p>
 								</div>
 							</article>
 
@@ -160,9 +160,9 @@
 								</form> -->
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/muhammad-hamza-zaman/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://www.facebook.com/mhzaman.cs/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="https://www.instagram.com/mhzaman.cs/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://github.com/MuhammadZ985" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.facebook.com/mhzaman.mhz/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/mhzaman.mhz/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/mhzaman-cs" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://discordapp.com/users/4mulator#7586/" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 								</ul>
 							</article>
