Update and Split Resume

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Projects</a></li>
 								<!-- <li><a href="#about">GitHub</a></li> -->
-								<li><a href="resume.pdf">Resume</a></li>
+								<li><a href="#resume">Resume</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!-- <li><a href="#elements">Elements</a></li> -->
 							</ul>
@@ -124,12 +124,18 @@
 								</div>
 							</article>
 
-						<!-- About -->
-							<!-- <article id="about">
-								<h2 class="major">GitHub Metrics</h2>
-								 <span class="image main"><img src="images/pic03.jpg" alt="" width="80%!important" height="25%" /></span>
-								<p>My GitHub metrics are updated here in real-time, using GitHub's API.</p>
-							</article> -->
+						<!-- Resume -->
+							<article id="resume">
+								<h2 class="major">Resume</h2>
+								<nav>
+								 <ul>
+									 <li><a href="resume.pdf">Generalist Software Engineer Resume</a></li>
+									 <li><a href="Web_Development_Resume.pdf">Web Development Resume</a></li>
+									 <!-- <li><a href="#about">GitHub</a></li> -->
+									 <!-- <li><a href="#elements">Elements</a></li> -->
+								 </ul>
+							 </nav>
+							</article>
 
 						<!-- Contact -->
 						<!-- https://api.staticforms.xyz/184c210c-92ad-458b-b71d-d7c000584081 -->
