--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
 								 <ul>
 									 <li><a href="resume.pdf">Generalist Software Engineer Resume</a></li>
 									 <li><a href="Web_Development_Resume.pdf">Web Development Resume</a></li>
-									 <!-- <li><a href="#about">GitHub</a></li> -->
-									 <!-- <li><a href="#elements">Elements</a></li> -->
+									 <li><a href="Data_Science_Resume.pdf">Data Science Resume</a></li>
 								 </ul>
 							 </nav>
 							</article>
