--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 								<nav>
 								 <ul>
 									 <li><a href="resume.pdf">Generalist Software Engineer Resume</a></li>
+									 <li><a href="Resume_Shortened.pdf">Shortened Resume</a></li>
 									 <li><a href="Web_Development_Resume.pdf">Web Development Resume</a></li>
 									 <li><a href="Data_Science_Resume.pdf">Data Science Resume</a></li>
 								 </ul>
