--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<article id="intro">
 								<h2 class="major">Introduction</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="Waterloo" /></span>
-								<p>My passion for programming brought me to the Cheriton School of Computer Science at the University of Waterloo. I am working towards my BCS and am scheduled to complete it in 2024. I am interested specifically in FinTech, Software Engineering, and Data Science.</p>
+								<p>My passion for programming brought me to the Cheriton School of Computer Science at the University of Waterloo. I am working towards my BCS with a minor in statistics. I am interested specifically in FinTech, Software Engineering, and Data Science.</p>
 								<p>I continue to develop my skills through online coursework, side projects, datathons and hackathons. To see my projects, check out my GitHub profile. I am specifically looking for opertunities related to Software Engineering and Quantitative Research; however, I am willing to work flexibly in a different position. I value hard work, equality, and honesty. I like keeping up with the latest news in the world of technology and spending time with family. In the coming years, I hope to develop both as a person and as a working professional.</p>
 							</article>
 
@@ -130,7 +130,7 @@
 								<nav>
 								 <ul>
 									 <li><a href="resume.pdf">Resume</a></li>
-									 <li><a href="Full_Resume.pdf">Generalist Software Engineer Resume</a></li>
+									 <!-- <li><a href="Full_Resume.pdf">Generalist Software Engineer Resume</a></li> -->
 									 <li><a href="Web_Development_Resume.pdf">Web Development Resume</a></li>
 									 <li><a href="Data_Science_Resume.pdf">Data Science Resume</a></li>
 								 </ul>
