--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>M. Zaman</title>
+		<title>H. Zaman</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Muhammad Zaman</h1>
+								<h1>Hamza Zaman</h1>
 								<p>I am a Computer Science Student at the University of Waterloo.
 									<br />
 									This website is a compliations of my CV, previous experinces, awards and projects.</p>
@@ -45,7 +45,7 @@
 							<article id="intro">
 								<h2 class="major">Introduction</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="Waterloo" /></span>
-								<p>My passion for programming brought me to the Cheriton School of Computer Science at the University of Waterloo. I am working towards my BCS with a minor in statistics. I am interested specifically in FinTech, Software Engineering, and Data Science.</p>
+								<p>My full name is Muhammad Hamza Zaman and I have been programming since I was 13. My passion for programming brought me to the Cheriton School of Computer Science at the University of Waterloo. I am working towards my BCS with a minor in statistics. I am interested specifically in FinTech, Software Engineering, and Data Science.</p>
 								<p>I continue to develop my skills through online coursework, side projects, datathons and hackathons. To see my projects, check out my GitHub profile. I am specifically looking for opertunities related to Software Engineering and Quantitative Research; however, I am willing to work flexibly in a different position. I value hard work, equality, and honesty. I like keeping up with the latest news in the world of technology and spending time with family. In the coming years, I hope to develop both as a person and as a working professional.</p>
 							</article>
 
@@ -165,7 +165,7 @@
 									</ul>
 								</form> -->
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/muhammad-hamza-zaman/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/m-hamza-zaman/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://www.facebook.com/mhzaman.mhz/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.instagram.com/mhzaman.mhz/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/mhzaman-cs" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
