--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
 
 									<p>The East-Coast Dataopen hosted by Citadel and Correlation One is an invite-only Datathon featuring university students across the east coast. The event started on the 21st of March and ended on the 28th, lasting about a whole week. I was in a team of two where we analyzed the non-conventional indicators and instigators of traffic. We posed the following question: "How would investments in businesses and education affect traffic and road safety in major American cities?" In this report, we analyzed datasets and later created recommendations for which non-conventional areas municipal governments should invest in to reduce traffic congestion. The three cities of focus were New York, NY, Austin, TX, and Washington, DC. We analyzed publicly available data on 311 calls, building permits, business licenses, population education level and traffic congestion statistics. The report could be seen on the following GitHub link: <a target="_blank" href="https://github.com/mhzaman-cs/Citadel-Datathon">https://github.com/mhzaman-cs/Citadel-Datathon</a></p>
 								</div>
+								
+								<div>
+									<h3>Employee Manager</h3>
+									<p>Created a full-stack CRUD application that enables managers to store, view, and edit information about employees. Utilized Spring Boot in Java to handle back-end logic and stored the data in a MySQL database. Developed front-end control panel with Angular in TypeScript integrated with BootStrap for UI enhancement. Created a REST API through a REST controller which uses HTTP requests to access data from the server. Utilized Spring Data JPA to effectively develop the persistence layer to communicate with the MySQL database. The code for the project could be seen on the following GitHub link: <a target="_blank" href="https://github.com/mhzaman-cs/Employee-Manager">https://github.com/mhzaman-cs/Employee-Manager</a></p>
+								</div>
+
+								<div>
+									<h3>Bank Account Manager</h3>
+									<p>Designed and developed an optimized banking system in C++, utilizing data structures like Hashmaps and Binary Search Trees to store account information and allow for efficient data access. Enforced multiple user types which have different authorization levels allowing for specialized user tasks. The code for the project could be seen on the following GitHub link: <a target="_blank" href="https://github.com/mhzaman-cs/Bank-Account-Manager">https://github.com/mhzaman-cs/Bank-Account-Manager</a></p>
+								</div>
 
 								<div>
 									<h3>Amazon Customer Reviews Scraper</h3>
@@ -142,7 +152,7 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<p>I am actively looking for internships opportunities over the school year. I am interested specifically in FinTech, Quant, Software Engineering, and Data Science. I continue to develop these skills through online coursework, side projects, and hackathons (see GitHub for more information). Although internships specifically related to computer science and stats interest me I am willing to work flexibly in a different position. Besides internships I am also open to full-time and part-time employment, freelance opportunities, tutoring, volunteer work, working together in hackathons, etc.</p>
-								<p>Feel free to contact me through email at <a href="mailto:mhzaman.cs@gmail.com">mhzaman.cs@gmail.com</a>, or reach out to me through any of the platforms linked below.</p>
+								<p>Feel free to contact me through email at <a href="mailto:hzaman.tech@gmail.com">hzaman.tech@gmail.com</a>, or reach out to me through any of the platforms linked below.</p>
 								<!-- <form action="https://api.staticforms.xyz/submit" method="POST">
 									<input type="hidden" name="accessKey" value="184c210c-92ad-458b-b71d-d7c000584081">
 									<div class="fields">
