Update Resume and Fix Spelling mistakes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>H. Zaman</title>
+		<title>M. Zaman</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,7 +23,7 @@
 								<h1>Miles Zaman</h1>
 								<p>I am a Computer Science Student at the University of Waterloo.
 									<br />
-									This website is a compliations of my CV, previous experinces, awards and projects.</p>
+									This website is a compliations of my CV, previous experiences, awards and projects.</p>
 							</div>
 						</div>
 						<nav>
