--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<article id="intro">
 								<h2 class="major">Introduction</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="Waterloo" /></span>
-								<p>My full name is Miles (my legal first name is Muhammad) Hamza Zaman and I have been coding since I was 13. My passion for programming brought me to the Cheriton School of Computer Science at the University of Waterloo. I am working towards my BCS with a minor in statistics. I am interested specifically in FinTech, Software Engineering, and Data Science.</p>
+								<p>My full name is Miles Zaman and I have been coding since I was 13. My passion for programming brought me to the Cheriton School of Computer Science at the University of Waterloo. I am working towards my BCS with a minor in statistics. I am interested specifically in FinTech, Software Engineering, and Data Science.</p>
 								<p>I continue to develop my skills through online coursework, side projects, datathons, and hackathons. To see my projects, check out my GitHub profile. I am specifically looking for opportunities related to Software Engineering and Quantitative Research; however, I am willing to work flexibly in a different position. I value hard work, equality, and honesty. I like keeping up with the latest news in the world of technology and spending time with family. In the coming years, I hope to develop both as a person and as a working professional.</p>
 							</article>
 
